--- a/db-project-frontend/package.json
+++ b/db-project-frontend/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.13.1",
     "@mui/x-date-pickers": "^6.5.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "date-fns": "^2.30.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
