--- a/db-project-frontend/package.json
+++ b/db-project-frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/styles": "^5.13.2",
     "@mui/x-date-pickers": "^6.5.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
